--- a/SportsSideKick/app/src/main/res/drawable/seek_bar_custom.xml
+++ b/SportsSideKick/app/src/main/res/drawable/seek_bar_custom.xml
@@ -5,7 +5,7 @@
     <item android:id="@android:id/background">
         <shape>
             <solid
-                android:color="@color/colorPrimary"
+                android:color="#b3000000"
                 />
         </shape>
     </item>
