--- a/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
@@ -9,15 +9,12 @@
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/youtube_layout_container"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_toStartOf="@+id/controls_container">
+        android:layout_height="wrap_content">
 
         <FrameLayout
             android:id="@+id/youtube_layout"
-            android:layout_centerHorizontal="true"
-            android:visibility="visible"
             app:layout_aspectRatio="178%"
-            app:layout_widthPercent="100%" />
+            app:layout_widthPercent="100%"/>
 
         <SeekBar
             android:id="@+id/seek_bar"
