increase chat bottom padding

--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -71,6 +71,8 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/message_container"
+            android:paddingBottom="32dp"
+            android:clipToPadding="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
