show pinned social item details

--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -251,6 +251,7 @@
                     android:layout_marginBottom="4dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="@dimen/margin_5"
+                    android:autoLink="all"
                     android:layout_marginStart="@dimen/margin_15"
                     android:ellipsize="end"
                     android:lineSpacingMultiplier="0.7"
@@ -263,6 +264,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/title"
+                    android:autoLink="all"
                     android:layout_marginBottom="@dimen/margin_5"
                     android:layout_marginEnd="@dimen/margin_15"
                     android:layout_marginStart="@dimen/margin_15"
