--- a/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
@@ -7,11 +7,18 @@
     android:background="@color/colorPrimaryMediumLight"
     android:clickable="true">
 
+    <View
+        android:id="@+id/topSpacer"
+        android:background="@drawable/phone_background"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        tools:visibility="gone" />
+
     <RelativeLayout
         android:id="@+id/top_toolbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/topSpacer"
         android:orientation="horizontal"
         android:tileMode="repeat">
 
@@ -48,6 +55,7 @@
         android:id="@+id/top_buttons_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
+        android:visibility="gone"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/top_toolbar"
         android:background="@color/colorPrimaryAbsoluteDark"
@@ -89,6 +97,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_2"
+        android:visibility="gone"
         android:layout_below="@+id/top_toolbar"
         android:orientation="horizontal">
 
