ability to mute wall notifications

--- a/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
@@ -551,6 +551,7 @@
                     android:id="@+id/wall_notifications"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_gravity="center_horizontal"
                     android:gravity="center_horizontal"
                     android:background="@android:color/transparent"
@@ -561,6 +562,7 @@
 
                 <View
                     android:layout_width="match_parent"
+                    android:visibility="gone"
                     android:layout_height="@dimen/height_1"
                     android:background="@color/colorPrimaryVeryDark" />
 
