--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -372,6 +372,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/comments_wall"
                     android:layout_width="match_parent"
+                    android:layout_marginBottom="80dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tutorial_container"
                     android:layout_marginTop="@dimen/margin_20" />
@@ -557,7 +558,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:visibility="gone"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <View
             android:id="@+id/blurredContainer"
