--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -24,12 +24,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/topImage"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/image_wall_background" />
+                    tools:src="@drawable/image_wall_background" />
 
                 <TextView
                     android:id="@+id/topCaption"
