--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -35,6 +35,7 @@
                 android:ellipsize="end"
                 android:lineSpacingMultiplier="0.8"
                 android:maxLines="4"
+                android:hyphenationFrequency="full"
                 android:paddingBottom="8dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
@@ -70,6 +71,7 @@
                     android:id="@+id/socialSource"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
+                    android:layout_marginBottom="4dp"
                     android:layout_marginLeft="16dp"
                     tools:src="@drawable/ic_social_source_facebook"/>
 
