status bar background when on white

--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -95,6 +95,7 @@
                             android:layout_height="250dp"
                             android:adjustViewBounds="true"
                             android:background="@color/colorPrimaryVeryLight"
+                            tools:src="@drawable/wall_detail_header_placeholder"
                             android:scaleType="centerCrop" />
 
                         <VideoView
@@ -446,6 +447,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="24dp"
+            android:background="@drawable/gradient_black_to_transparent"
             tools:visibility="gone" />
 
         <LinearLayout
