--- a/SportsSideKick/app/src/brugge/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/brugge/res/layout/fragment_news_item.xml
@@ -384,7 +384,7 @@
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin_5"
             android:layout_marginEnd="@dimen/margin_15"
-            android:textSize="@dimen/font_size_12"
+            android:textSize="16sp"
             android:layout_marginStart="@dimen/margin_15"
             android:layout_marginTop="@dimen/margin_5"
             android:hint="@string/comment_hint"
