--- a/SportsSideKick/app/src/main/res/layout/include_input_field.xml
+++ b/SportsSideKick/app/src/main/res/layout/include_input_field.xml
@@ -45,7 +45,7 @@
             android:hint="@string/comment_hint"
             android:textColor="@color/black"
             android:textColorHint="@color/colorGrayDark"
-            android:textSize="@dimen/font_size_12"/>
+            android:textSize="16sp"/>
 
     </LinearLayout>
 
