social item image placeholder in detail view

--- a/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
@@ -67,7 +67,7 @@
         android:minLines="1"
         android:padding="@dimen/padding_12"
         android:scrollHorizontally="true"
-        android:text="@string/lorem_ipsum"
+        tools:text="@string/lorem_ipsum"
         android:textColor="?black"
         android:textSize="@dimen/list_item_text_size" />
 
