--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -273,7 +273,7 @@
                     android:autoLink="all"
                     android:lineSpacingMultiplier="0.9"
                     android:maxLines="3"
-                    android:text="@string/lorem_ipsum"
+                    tools:text="@string/lorem_ipsum"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
