--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -40,7 +40,7 @@
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:paddingTop="16dp"
-                android:text="@string/lorem_ipsum"
+                tools:text="@string/lorem_ipsum"
                 android:textColor="#1b1c1a"
                 android:textSize="@dimen/list_item_text_size" />
 
@@ -156,7 +156,7 @@
             android:minLines="1"
             android:padding="@dimen/padding_8"
             android:scrollHorizontally="true"
-            android:text="@string/lorem_ipsum"
+            tools:text="@string/lorem_ipsum"
             android:textColor="#bd000000"
             android:textSize="@dimen/font_size_14" />
 
