--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
@@ -38,7 +38,7 @@
         android:maxLines="3"
         android:padding="@dimen/padding_12"
         android:scrollHorizontally="true"
-        android:text="@string/lorem_ipsum"
+        tools:text="@string/lorem_ipsum"
         android:textColor="?black"
         android:textSize="@dimen/list_item_text_size" />
 
@@ -173,7 +173,7 @@
             android:minLines="1"
             android:padding="@dimen/padding_8"
             android:scrollHorizontally="true"
-            android:text="@string/lorem_ipsum"
+            tools:text="@string/lorem_ipsum"
             android:textColor="?black"
             android:textSize="@dimen/font_size_14" />
     </RelativeLayout>
