--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumours.xml
@@ -42,7 +42,7 @@
                 android:paddingLeft="8dp"
                 android:paddingRight="16dp"
                 android:paddingBottom="8dp"
-                android:text="@string/lorem_ipsum"
+                tools:text="@string/lorem_ipsum"
                 android:textColor="#1b1c1a"
                 android:textSize="@dimen/list_item_text_size"/>
 
@@ -159,7 +159,7 @@ android:visibility="gone">
     android:minLines="1"
     android:padding="@dimen/padding_8"
     android:scrollHorizontally="true"
-    android:text="@string/lorem_ipsum"
+    tools:text="@string/lorem_ipsum"
     android:textColor="#bd000000"
     android:textSize="@dimen/font_size_14"/>
 
