--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -67,7 +67,7 @@
         android:minLines="1"
         android:padding="@dimen/padding_8"
         android:scrollHorizontally="true"
-        android:text="@string/lorem_ipsum"
+        tools:text="@string/lorem_ipsum"
         android:textColor="?black"
         android:textSize="16sp" />
 
