add selected state for social icon

--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -249,6 +249,12 @@
             android:layout_alignParentTop="true"
             android:background="@color/colorGraySemiLight">
 
+            <!--switch like and comment icon positions-->
+
+            <!--make comment input field more dark, and shared message container more transparentt-->
+
+            <!--fragment manager: destroy wall item or news item fragment on back pressed (current behaviour causes visisble redraw on reopen)-->
+
             <android.support.percent.PercentRelativeLayout
                 android:id="@+id/profile"
                 android:layout_width="match_parent"
